[metadata]
# version is set by CI/CD pipeline
name = kappautils
description = utilities for training machine learning models with pytorch
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BenediktAlkin/KappaUtils
project_urls =
    Source Code = https://github.com/BenediktAlkin/KappaUtils
    Bug Tracker = https://github.com/BenediktAlkin/KappaUtils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = find:
python_requires = >=3.6
install_requires =
    einops
    numpy
    pillow
    torch
    torchvision


[options.packages.find]
exclude =
    tests_unit*
